--- a/src/components/Sidebar.module.css
+++ b/src/components/Sidebar.module.css
@@ -15,6 +15,26 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: calc(0px - 1.5rem - 6px);
+}
+
+.avatar {
+    width: calc(3rem + 12px);
+    height: calc(3rem + 12px);
+    border-radius: calc((3rem + 12px) / 2);
+    border: 4px solid var(--gray-800);
+    outline: 2px solid var(--green-500);
+}
+
+.profile strong {
+    margin-top: 1rem;
+    color: var(--gray-100);
+    line-height: 1.6;
+}
+
+.profile span {
+    font-size: 0.875rem;
+    color: var(--gray-400);
 }
 
 .sidebar footer {
@@ -36,5 +56,13 @@
 
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
+
+    transition: color 0.2s, background-color 0.1s;
+}
+
+
+.sidebar footer a:hover {
+    background: var(--green-500);
+    color: var(--white);
 }
